# RayTracing

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  color.cpp  color.h  main.cpp  main.cu  ray.cpp  ray.h  vcpkg.json  vec3.cpp  vec3.h
cuda/: camera.cuh  color.cuh  cudaTools.cuh  hittable.cuh  hittable_list.cuh  interval.cuh  main.cu  main.cuh  material.cuh  ray.cuh  sphere.cuh  vec3.cuh  world.cuh
include/: aabb.hpp  bvh.hpp  camera.hpp  color.hpp  display.hpp  grid.hpp  hittable.hpp  hittable_list.hpp  interval.hpp  main.hpp  material.hpp  prettyPrint.h  prettyPrint.hpp  ray.hpp  rtweekend.hpp  sphere.hpp  vec3.hpp
src/: aabb.cpp  bvh.cpp  camera.cpp  camera.hpp  color.cpp  display.cpp  grid.cpp  grid.hpp  hittable.cpp  hittable.h  hittable_list.cpp  hittable_list.h  interval.cpp  interval.h  main.cpp  main.cu  main.h  material.cpp  prettyPrint.cpp  ray.cpp  rtweekend.cpp  rtweekend.h  sphere.cpp  sphere.h  vec3.cpp
